welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:7: error: Invalid literal number
for compteur <-1to pas
               ^Program:7: error: '(' expected but identifier found.
for compteur <-1to pas
    ^