welcome.lessons.welcome.loopfor.LoopFor.scala.code
var pas:Int =0
while(!estSurBiscuit) {
	avance();
	pas=pas+1
}
for compteur <-1to pas
recule()